# support-agent

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
.trajectly/baselines/support-agent-enterprise-escalation/v1/: baseline.meta.json  fixtures.json  trace.jsonl  trace.meta.json
.trajectly/baselines/support-agent-invoice-lookup/v1/: baseline.meta.json  fixtures.json  trace.jsonl  trace.meta.json
.trajectly/baselines/support-agent-mfa-reset/v1/: baseline.meta.json  trace.jsonl  (+2 more)
.trajectly/current/: support-agent-enterprise-escalation.json  support-agent-invoice-lookup.json  support-agent-mfa-reset.json
app/: agent.py  config.py  db.py  guardrails.py  helpers.py  main.py  models.py  retrieval.py  schema.sql  tools.py
blog/: testing-the-support-agent.md
data/docs/: billing.md  escalation.md  mfa.md  refunds.md  security.md
evals/: agent_provider.py  prompt.txt  promptfoo.yaml  promptfoo_cases.yaml  run_agent.py
scripts/: generate_data.py  init_db.py
tests/: conftest.py
tests/component/: test_orchestrator.py
tests/integration/: test_agent_flow.py
tests/property/: test_invariants.py
tests/unit/: test_guardrails.py  test_helpers.py  test_retrieval.py  test_tools.py
trajectly/: config.yaml
trajectly/cases/: enterprise_sensitive_escalation.yaml  invoice_lookup.yaml  mfa_reset_requires_approval.yaml
trajectly/specs/: enterprise_sensitive_escalation.agent.yaml  invoice_lookup.agent.yaml  mfa_reset_requires_approval.agent.yaml
trt_adapters/: enterprise_escalation.py  invoice_lookup.py  mfa_reset.py
